[Fixes #33] prevent long comments from stretching the post widget

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -26,4 +26,4 @@ $loader-height: 48px;
 $profile-pic-size: 24px;
 
 //// Comments
-$comment-width: 350px;
+$comment-width: 450px;
