--- a/app/assets/stylesheets/components/_post-widget.scss
+++ b/app/assets/stylesheets/components/_post-widget.scss
@@ -7,6 +7,7 @@ div.post-widget {
   align-items: center;
   margin-top: 8px;
   margin-bottom: 8px;
+  max-width: $post-image-width;
 
   box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
   background-color: $primary_lighter;
